# llingr-rs-kafka

./: .dockerignore  .fossa.yml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  REUSE.toml  THIRD-PARTY-NOTICES  build.rs  deny.toml  gen-third-party-notices.sh  release-plz.toml
.github/workflows/: ci.yml  coverage.yml  docs-check.yml  lint.yml  pipeline.yml  release-build.yml  release-plz.yml  release.yml  vulncheck.yml
LICENSES/: LicenseRef-Llingr-Commercial.txt
abi-check/: Cargo.toml  build.rs
abi-check/src/: lib.rs
bridge/: adapter_franz.go  adapters.go  adapters_test.go  auth_test.go  aws_iam.go  bandwidth_test.go  callback_ordering_test.go  config.go  config_test.go  coverage_test.go  coverage_testsupport.go  franz_security.go  franz_security_test.go  gcp_auth_test.go  gcp_iam.go  go.mod  go.sum  main.go  main_test.go  marshal_test.go  oauth_oidc.go  options_audit_test.go  record_meta_test.go  testsupport.go
docker/: Dockerfile  Dockerfile.builder
docs/: building-packaging.md  configuration.md  example.md  getting-started.md  index.md  kafka-options.md  licensing.md  logging.md  metrics.md  operations.md  processing.md  security.md  troubleshooting.md
docs-examples/: Cargo.toml  build.rs
docs-examples/src/: lib.rs
docs/check-examples/: Cargo.toml  build.rs
docs/check-examples/src/: lib.rs
docs/internal/: ARCHITECTURE.md  BUILDING.md  MUSL.md
example/: .dockerignore  Cargo.toml  Dockerfile.consumer  Dockerfile.producer  docker-compose.yml
example/consumer/: Cargo.toml
example/consumer/src/: main.rs
example/producer/: Cargo.toml
example/producer/src/: main.rs
examples/: README.md
examples/auth/: aws_msk_iam.rs  gcp_iam.rs  mtls.rs  oauthbearer_oidc.rs  sasl_plain.rs  scram_sha256.rs
examples/e2e/: Cargo.toml  Dockerfile  Dockerfile.consumer  Dockerfile.producer  README.md  docker-compose.yml
examples/e2e/consumer/: Cargo.toml
examples/e2e/consumer/src/: main.rs
examples/e2e/producer/: Dockerfile  go.mod  go.sum  main.go
examples/e2e/redpanda/: bootstrap.yaml  redpanda.yaml
examples/e2e/scripts/: gen-certs.sh
src/: config.rs  engine.rs  engine_coverage_tests.rs  ffi.rs  lib.rs  logging.rs  metrics.rs  options.rs  options_auth_tests.rs  options_gcp_tests.rs  snapshot.rs  trampolines.rs  trampolines_coverage_tests.rs
