# SPDX-FileCopyrightText: Copyright (c) 2026 The llingr-rs-kafka Authors
# SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Llingr-Commercial
#
# The end-to-end example is its own cargo workspace, kept separate from the
# published crate (the crate's Cargo.toml excludes example/ from packaging).
# Two binaries: a pure-Rust rskafka producer and a llingr-kafka consumer.
#
# The consumer depends on the llingr-kafka crate by path (../..), so this
# workspace only fully resolves once that crate exists in the repository root.
# Until then, build the producer on its own, which needs nothing from the crate:
#   cargo build -p producer          (once the crate lands, resolving the whole
#                                      workspace; before that, build the producer
#                                      from an isolated copy, or via its image)

[workspace]
resolver = "2"
members = ["producer", "consumer"]
