# SPDX-FileCopyrightText: Copyright (c) 2026 The llingr-rs-kafka Authors
# SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Llingr-Commercial
#
# The example producer: a pure-Rust Kafka producer built on rskafka. No C
# toolchain, no cmake, no librdkafka; this is what keeps the producer image
# C-free and buildable as a fully static musl binary on a bare scratch image.

[package]
name = "producer"
version = "0.1.0"
edition = "2021"
publish = false
license = "AGPL-3.0-only OR LicenseRef-Llingr-Commercial"

[dependencies]
# Minimal pure-Rust Kafka client. Partition-explicit (one PartitionClient per
# partition, no client-side key partitioner) and its produce() resolves on the
# broker's response, so awaiting a produce is awaiting the acknowledgement.
# default-features = false keeps out the optional compression/transport features
# (all of which would only add weight here); NoCompression needs none of them.
rskafka = { version = "0.6", default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# RFC3339 timestamps for the payload and the DateTime<Utc> rskafka Record needs.
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
log = "0.4"
env_logger = "0.11"

[[bin]]
name = "producer"
path = "src/main.rs"
